# lightx

./: .gitignore  CMakeLists.txt  client.c  dispatch.c  dri3.c  glx.c  main.c  present.c  server.c  socket.c  xproto.c
include/: client.h  dispatch.h  misc.h  server.h  socket.h
include/lightx/: client.h  dispatch.h  dri3.h  glx.h  present.h  socket.h  xproto.h
